add matirial card

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,7 @@ body{
   background-color: #f0f0f0;
   font-family: Roboto, 'Helvetice New', 'Arial', sans-serif
 }
+mat-card{
+  max-width: 960px;
+  margin: 0 auto;
+}
