--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<h1>
-  {{title}}
- </h1>
- <app-home></app-home>
+<mat-toolbar color="primary">
+  <span>{{title}}</span>
+</mat-toolbar>
+<mat-card>
+  <app-home></app-home>
+</mat-card>
